[tool.poetry]
name = "test-knowledge"
version = "0.1.0"
description = ""
authors = ["jiangzihan <jiangzihan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
